refactor(wit-database): wrapper class unboxing primitive type
Signed-off-by: Dely <dph5199278@163.com>